--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Liker Land</string>
-    <string name="intercom_api_key">android_sdk-56496b6d8e04617c8ee32cfc8f9df4899081dba8</string>
-    <string name="intercom_app_id">e7kyqbxv</string>
+    <string name="intercom_api_key" translatable="false">android_sdk-56496b6d8e04617c8ee32cfc8f9df4899081dba8</string>
+    <string name="intercom_app_id" translatable="false">e7kyqbxv</string>
 </resources>
